[tool.poetry]
name = "neureality"
version = "0.1.0"
description = ""
authors = ["Jozef Jasek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
ultralytics = "^8.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
